Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15, 6.0
-
None
-
-
c2dcb7eaa19251123f9fa9546f4fe3508751b918 (qt/qtbase/dev) c85a117980def89eeaad3b722e5b6aa879a5d091 (qt/qtbase/5.15)
Description
After bb67c3b68b00fb2075a971f4f0d58e1867ef7128, Qt Widgets applications may see warnings like this:
QPainter::begin: Paint device returned engine == 0, type: 3 QPainter::setCompositionMode: Painter not active QPainter::end: Painter not active, aborted
This seems to be because we in certain cases before would return a blank image consisting only of margins, but since we now respect the glyph margins in the font engine, we return an invalid image instead.
Attachments
Issue Links
- resulted from
-
QTBUG-84357 Misaligned text on Windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-84629 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
302620,2 | Windows: Fix QPainter warnings when using some fonts | dev | qt/qtbase | Status: MERGED | +2 | 0 |
302770,2 | Windows: Fix QPainter warnings when using some fonts | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |